--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-bro": "^1.0.3",
     "gulp-connect": "^5.2.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "jquery": "^3.3.1"
   }
 }
